--- a/index.html
+++ b/index.html
@@ -5,205 +5,190 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--Import Google Icon Font and Social Icons-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?u8vidh">
-  <!--Import materialize.css-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
+
   <!--Import local stylesheet-->
   <link rel="stylesheet" href="css/main.css">
   <title>Michael Moore</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
 </head>
 
-<body id="top">
-  <div class="navbar-fixed">
-    <nav class="white" role="navigation">
-      <div class="nav-wrapper container">
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#top">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+<body>
+    <div class="ui text menu">
+        
+        <a class="item">
+          Home
+        </a>
+        <a class="item">
+            About
+          </a>
+        <a class="item">
+          Portfolio
+        </a>
+        <a class="item">
+          Contact
+        </a>
       </div>
-    </nav>
-  </div>
-  <ul id="nav-mobile" class="sidenav">
-    <li><a class="sidenav-close" href="#top">Home</a></li>
-    <li><a class="sidenav-close" href="#about">About</a></li>
-    <li><a class="sidenav-close" href="#portfolio">Portfolio</a></li>
-    <li><a class="sidenav-close" href="#contact">Contact</a></li>
-  </ul>
+     
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row">
-          <div class="col offset-l5 s12 m9">
-            <h4 class="header">Michael Moore</h4>
-            <h4 class=>Web Developer</h4>
-          </div>
+
+  <!-- --------------------------------------------------------------------------------------------- -->
+  <div class="parallax">
+
+    <div id="group1" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <h1>Mike Moore</h1>
+          <h1>Web Developer</h1>
         </div>
       </div>
+      <div class="parallax__layer parallax__layer--back">
+        <div class="centre"></div>
+      </div>
     </div>
-    <div class="parallax"><img src="https://i.imgur.com/XCDH7Ud.jpg" alt="Nedim Filipovic Dog Mountain photograph"></div>
-  </div>
-
-
-  <div class="container">
-    <div class="section">
-
-      <!--   Icon Section   -->
-      <div id="about" class="row anchor">
-        <!-- <div class="col s4">
-            <img class="responsive-img materialboxed" src="https://i.imgur.com/YT1MCGB.jpg" alt="Mike Moore Profile Photo">
-          </div> -->
-
-        <div class="col s8">
-          <h5>About Me</h5>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group2" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <h2>About Me</h2>
           <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be
             a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the
             time.
             Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
-          <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
-          <div class="center">
-            <a class="btn-floating btn-large waves-effect waves-light" href="https://github.com/mikemoore1618"><i class="socicon-github"></i></a>
-            <a class="btn-floating btn-large waves-effect waves-light" href="https://www.linkedin.com/in/mikemoore1618/"><i
-                class="socicon-linkedin"></i></a>
-          </div>
+
+          <i class="github icon huge link"></i>
+          <i class="gitlab icon huge link orange"></i>
+          <i class="linkedin icon huge link blue"></i>
         </div>
       </div>
     </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row">
-          <h4>Skills & Technologies</h4>
-          <div class="col l3 s6">
-            <h6>Langauges</h6>
-            <p>HTML<i class="html5 icon"></i> | CSS<i class="css3 alternate icon"></i> | Javascript<i class="js icon"></i>
-              | Ruby<i class="gem icon"></i></p>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group3" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre tech">
+          <div>
+            <h3>Langauges</h3>
+            <p>HTML<i class="html5 icon"></i> | CSS<i class="css3 alternate icon"></i> | Javascript<i class="js icon"></i> | Ruby<i class="gem outline icon"></i></p>
           </div>
-          <div class="col l3 s6">
-            <h6>Libraries & Frameworks</h6>
-            <p>jQuery | Rails | Node<i class="node js icon"></i> | Express | React<i class="react icon"></i>|
-              Socket.io | </p>
-            <!-- Bootstrap | Semantic UI | Tachyons  -->
+          <br />
+          <div>
+            <h3>Libraries & Frameworks</h3>
+            <p>jQuery | Rails | Node<i class="node js icon"></i> | Express | React<i class="react icon"></i>| Socket.io |
+            </p>
           </div>
-          <div class="col l3 s6">
-            <h6>Databases</h6>
+          <br />
+          <div>
+            <h3>Databases</h3>
             <p>PostgreSQL | MongoDB</p>
           </div>
-          <div class="col l3 s6">
-            <h6>Software</h6>
+          <br />
+          <div>
+            <h3>Software</h3>
             <p>Adobe Illustrator | Adobe Photoshop | Adobe InDesign | Google Sketchup</p>
           </div>
         </div>
       </div>
+      <div class="parallax__layer parallax__layer--back">
+        <div class="centre"></div>
+      </div>
     </div>
 
-    <div class="parallax"><img src="https://i.imgur.com/wgKyvY2.jpg" alt="Big Sur Ocean Photograph"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-          <div class="row">
-            <div class="row anchor" id="portfolio">
-              <div class="col offset-l2 l8 s12 m9">
-                <div class="row">
-                  <div class="col s12">
-                    <h4>Portfolio</h4>
-                    <h5>Pong</h5>
-                    <p>JavaScript | HTML | CSS | jQuery</p>
-                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
-                    <p>Pong is a two-dimensional sports game that simulates tennis, or Ping
-                      Pong, or air hockey?</p>
-                    <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
-                    <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
-
-                    <h5>Spotify Go!</h5>
-                    <p>Ruby on Rails | PostgreSQL | HTML | CSS</p>
-                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
-                    <p>This app aims solve to Spotify's clunky "Friend Activity" section and
-                      make it easier to check out what your friends are listening to and post songs youre currently
-                      groovin' too!</p>
-                    <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
-                    <a href="https://github.com/needimf/CampShare">Check out the code!</a>
-
-                    <h5>Red Rover</h5>
-                    <p>JavaScript | Node.js | Express | MongoDB/Mongoose</p>
-                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
-                    <p>Earth: The year is 2139. The massive, long-standing global military
-                      conflict between the nations and militaries of Humanity and a collective of self-aware robots
-                      let by Mecha-Elon Musk is over and the world finally knows true peace.</p>
-                    <p>Robots have now begun to spread across the Solar System and Mars has emerged as the next HOT
-                      vacation destination!</p>
-                    <p>But where to go? How can you sift through the endless pages or useless travel sites and the
-                      onsloaught of spam and advertisements?</p>
-                    <p>Look no further! Red Rover is the one-stop-shop for Robots like you to Review Popular Mars
-                      Destinations! Log in, search sites, read descriptions, view images, and even chat with other
-                      live robots!</p>
-                    <a href="https://lets--fly.herokuapp.com/">Try it here!</a>|
-                    <a href="https://github.com/chetskii/red-rover">Check out the code!</a>
-
-                    <h5>Data Tracker</h5>
-                    <p>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</p>
-                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
-                    <p>Have you always wanted to track your daily habits and and wanted to see
-                      if there was a connectiom or correlation between them?like, for example, if when I eat 6 pieces
-                      of pizza my energy level drops the next day and I'm pissed off at the world, or if when I
-                      excersize after work am I more likely to sleep well that night and be in a good mood the next
-                      day?</p>
-                    <p>I have looked for an ap out there that allows me to do this digitally, but in my search, I
-                      havent been able to find an app quite like the one im looking for that is well designed and
-                      easy to use, so, I decided to make one!</p>
-                    <a href="https://gentle-stream-96140.herokuapp.com/">Try it here!</a>|
-                    <a href="https://github.com/mikemoore1618/p4_react_app_data_tracker">Check out the code!</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group4" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <div>
+            <!-- <h2>Portfolio</h2> -->
+            <h3>Pong</h3>
+            <h4>JavaScript | HTML | CSS | jQuery</h4>
+            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <p>
+              My rendition of Pong, one of the earliest arcade video games. It is a table tennis sports game featuring simple two-dimensional graphics. The game was originally manufactured by Atari, which released it in 1972. Allan Alcorn created Pong as a training exercise assigned to him by Atari co-founder Nolan Bushnel</p>
+            <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
+            <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
           </div>
         </div>
       </div>
+    </div>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group4" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <div>
 
-      <div class="parallax-container valign-wrapper">
-        <div class="section no-pad-bot">
-          <div class="container">
-            <div class="row center">
-            </div>
+            <h3>Spotify Go!</h3>
+            <h4>Ruby on Rails | PostgreSQL | HTML | CSS</h4>
+            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <p>Think Spotify meets Instagram: This app makes it easy to share and explore your favorite music with your friends! Sign in, post music, find your freinds, sort your music feed by most recent, alphabetical, or random!</p>
+            <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
+            <a href="https://github.com/needimf/CampShare">Check out the code!</a>
           </div>
         </div>
-        <div class="parallax"><img src="https://i.imgur.com/0BhiwyV.jpg" alt="Joshua Tree Photograph"></div>
       </div>
+    </div>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group4" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <div>
+            <h3>Red Rover</h3>
+            <h4>JavaScript | Node.js | Express | MongoDB/Mongoose</h4>
+            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <p>Elon Musk's robots have gained consciousness and are spreading across the Solar System. Mars has emerged
+              as the next <em>HOT</em>robot vacation destination- But where do you go? How can you sift through the
+              endless pages of useless travel sites? Look no further! Red Rover is the one-stop-shop for Robots like you! Log in, search, explore, and even
+              chat with other live robots!</p>
+            <a href="https://lets--fly.herokuapp.com/">Try it here!</a>|
+            <a href="https://github.com/chetskii/red-rover">Check out the code!</a>
 
-      <footer id="contact" class="page-footer teal">
-        <div class="container">
-          <div class="row">
-            <div class="col l2 s12">
-              <p>San Fransisco, Ca</p>
-            </div>
-            <div class="col l3 s12">
-              <p>mikemoore1618@gmail.com</p>
-            </div>
           </div>
         </div>
-        <div class="footer-copyright">
-          <div class="container">
-            © 2018 Michael Moore
+      </div>
+    </div>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group4" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <div>
+            <h3>Data Tracker</h3>
+            <h4>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</h4>
+            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <p>Havent been sleeping well? Maybe its because youve been eating pizza before bed. Been in the best mood
+              of your life this week? Mybe it's because you've been doing yoga every morning! Track all of your daily
+              habits to see correlations between them!</p>
+            <a href="https://gentle-stream-96140.herokuapp.com/">Try it here!</a>|
+            <a href="https://github.com/mikemoore1618/p4_react_app_data_tracker">Check out the
+              code!</a>
           </div>
         </div>
-      </footer>
+      </div>
+    </div>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group5" class="parallax__group">
+      <div class="parallax__layer parallax__layer--back">
+        <div class="centre">
+        </div>
+      </div>
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <h1>Contact</h1>
+        </div>
+      </div>
+    </div>
+    <!-- --------------------------------------------------------------------------------------------- -->
+    <div id="group4" class="parallax__group_footer">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="centre">
+          <h2>Footer</h2>
+        </div>
+      </div>
+    </div>
+    <!-- --------------------------------------------------------------------------------------------- -->
 
-      <!-- Scripts-->
-      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
-      <script src="js/main.js"></script>
+    <!-- Scripts-->
+    <script src="js/main.js"></script>
 
 </body>
 
